--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/heeeun1207/KDT-2-Project-A-lecture_prac/issues"
   },
-  "homepage": "https://github.com/heeeun1207/KDT-2-Project-A-lecture_prac#readme"
+  "homepage": "https://github.com/heeeun1207/KDT-2-Project-A-lecture_prac#readme",
+  "devDependencies": {
+    "@types/node": "^20.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
+  }
 }
