--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/heeeun1207/KDT-2-Project-A-lecture_prac#readme",
   "devDependencies": {
     "@types/node": "^20.3.0",
+    "@webpack-cli/generators": "^3.0.7",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
