--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "typescript": "^5.1.3",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "react": "^18.2.0"
   }
 }
